# embedded-cpp-projects

./: CMakeLists.txt  README.md
.cache/clangd/index/: battery_monitor.cpp.0269E3C45A8DD7CF.idx  battery_monitor.hpp.A79EE699CABAEEAD.idx  crc16.cpp.445BCAB22299F3F0.idx  crc16.hpp.51A36D9E61EAEBEA.idx  device_controller.cpp.E6D063E9A444D980.idx  device_controller.hpp.D79B825793C86B6F.idx  eeprom_sim.cpp.CC4CCB2A7634E59A.idx  eeprom_sim.hpp.57E78965AB0202A0.idx  logger.cpp.EE5D6CF9097F4F57.idx  logger.hpp.E0DA27D362648923.idx  main.cpp.8668BD7B1DF26B32.idx  packet.cpp.EBD6E1B62730E8C6.idx  packet.hpp.752C350975BB354D.idx  pressure_sensor.cpp.36B2DB75F5A10297.idx  pressure_sensor.hpp.7A954ADAEA355C9B.idx  scheduler.cpp.08D7F3A56B03A7F4.idx  scheduler.hpp.5F63B31BEB202E52.idx  sensor_base.hpp.73309109763D8DEB.idx  state_machine.cpp.BCE64106B2CA781A.idx  state_machine.hpp.739B18F2A6F4DF2B.idx  temperature_sensor.cpp.769ED87AFC832392.idx  temperature_sensor.hpp.5ED796FDBA4508FE.idx  test_crc.cpp.8CA2EE80A35076C3.idx  test_packet.cpp.F3AF08B10B3998F4.idx  test_state_machine.cpp.DDFFAA5639613226.idx  (+2 more)
.github/workflows/: build.yml
docs/: protocol.md
include/comm/: crc16.hpp  packet.hpp  uart_sim.hpp
include/device/: device_controller.hpp  scheduler.hpp  state_machine.hpp
include/drivers/: battery_monitor.hpp  pressure_sensor.hpp  sensor_base.hpp  temperature_sensor.hpp
include/storage/: eeprom_sim.hpp
include/utils/: logger.hpp
src/: main.cpp
src/comm/: crc16.cpp  packet.cpp  uart_sim.cpp
src/device/: device_controller.cpp  scheduler.cpp  state_machine.cpp
src/drivers/: battery_monitor.cpp  pressure_sensor.cpp  temperature_sensor.cpp
src/storage/: eeprom_sim.cpp
src/utils/: logger.cpp
tests/: test_crc.cpp  test_packet.cpp  test_state_machine.cpp
